src/sass/App.scss
html, body {
  	-webkit-font-smoothing: antialiased;
    height: 100%;
}

body:not(.login) {
    background: #1C2023;

    #root {
        padding-top: 70px;
    }
}

$footer-height: 15px;

/* footer */
footer {
    height: $footer-height;
    font-size: 12px;
    background: #272C2F;
    color: #fff;
}

.left-sidebar {
    bottom: $footer-height;
}

/* Layout */
.content {
    overflow-y: auto;
    color:#fff;
    margin-left: 250px;
    margin-bottom: $footer-height;
}

.left-sidebar-off {
    .content {
        margin-left: 0px;
    }

    .left-sidebar {
        display:none;
    }
}

.featured-channels-list {
    a {
        text-decoration:none;

        &:hover {
            color:#666;
        }
    }

    .featured-channel-item {

      margin-bottom:10px;

      .avatar-holder {
          width:40px;
          img {
              border-radius:4px;
              display:block;
          }
      }

      .data-holder {
          width:calc(100% - 40px);
      }
  }
}

/* Scrollbar */

div.left-sidebar::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

div.left-sidebar::-webkit-scrollbar-button {
    width: 0px;
    height: 0px;
}

div.left-sidebar::-webkit-scrollbar-thumb {
    background: #999999;
    border-radius: 28px;
}

div.left-sidebar::-webkit-scrollbar-thumb:hover {
    background: #666666;
}

div.left-sidebar::-webkit-scrollbar-thumb:active {
    background: #666666;
}

div.left-sidebar::-webkit-scrollbar-track {
    background: transparent;
    border: 0px none #ffffff;
    border-radius: 0px;
}

div.left-sidebar::-webkit-scrollbar-track:hover {
    background: #1b2023;
}

div.left-sidebar::-webkit-scrollbar-track:active {
    background: #1b2023;
}

div.left-sidebar::-webkit-scrollbar-corner {
    background: transparent;
}

/* Misc */

.cursor-pointer {
    cursor: pointer;
}

.no-results {
  font-size:13px;
  text-transform:uppercase;
  font-weight:700;
  color:#C41502;
}

/* Filter Bar */

.filter-bar {
    margin:0 0 0 0;
    padding:0 0 0 0;
    border-bottom:2px solid #272C2F;

    li {
        display:inline-block;
        font-size:18px;
        position:relative;
        top:2px;

        a {
            color:#fff;
            border-bottom:2px solid #272C2F;
            text-decoration:none;
            display:block;
            padding:15px;

            &.active {
                border-bottom:2px solid #EA1902;
            }
        }
    }

}

/* Wallet */

.balance-wrapper {
    .balance-tile {
        h4 {
            margin:0 0 8px 0;
            font-size:13px;
            color:#6D7174;
            text-transform:uppercase;
            font-weight:500;
        }

        span {
          font-weight:600;
          font-size:18px;
          line-height:15px;
        }
    }

    .balance-action-links {

        margin-top:20px;
        font-size:12px;
        a {
          text-decoration:underline;
        }
    }
}

#legal-disclaimer {
    // from the upload page
    margin-top: 10px;
    font-size: 12px;
}

.token-amount-slider {
    .row {
        margin-left: 0px !important;
    }
}

.vit-typeable-value-indicator {
    input {
        text-align: right;
        width: 60%;
    }
}

/* Pre Wrap */

code {
 white-space: pre-wrap;       /* css-3 */
 white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 white-space: -pre-wrap;      /* Opera 4-6 */
 white-space: -o-pre-wrap;    /* Opera 7 */
 word-wrap: break-word;       /* Internet Explorer 5.5+ */
}

/* Alert */

.alert-dark {
  background:#111 !important;
  color:#ccc;
  border-color:#3D4143;
}

/* Loader */

.loader,
.loader:before,
.loader:after {
  border-radius: 50%;
}
.loader {
  color: #EA1902;
  font-size: 11px;
  text-indent: -99999em;
  margin: 0 auto;
  position: relative;
  width: 10em;
  height: 10em;
  box-shadow: inset 0 0 0 1em;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
}
.loader:before,
.loader:after {
  position: absolute;
  content: '';
}
.loader:before {
  width: 5.2em;
  height: 10.2em;
  background: #1C2023;
  border-radius: 10.2em 0 0 10.2em;
  top: -0.1em;
  left: -0.1em;
  -webkit-transform-origin: 5.2em 5.1em;
  transform-origin: 5.2em 5.1em;
  -webkit-animation: load2 2s infinite ease 1.5s;
  animation: load2 2s infinite ease 1.5s;
}
.loader:after {
  width: 5.2em;
  height: 10.2em;
  background: #1C2023;
  border-radius: 0 10.2em 10.2em 0;
  top: -0.1em;
  left: 5.1em;
  -webkit-transform-origin: 0px 5.1em;
  transform-origin: 0px 5.1em;
  -webkit-animation: load2 2s infinite ease;
  animation: load2 2s infinite ease;
}
@-webkit-keyframes load2 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load2 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.loader-more {
    height: 40px;
}

